[package]
name = "file_sharing"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "file_management"
harness = false

[dependencies]
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = [
    "accesskit",
    "default_fonts", 
    "glow", 
    "persistence",   
] }

serde = { version = "1", features = ["derive"] }
quinn = "0.11.5"
console-subscriber = "0.4.1"
tokio = {version = "1.41.0", features = ["full"]}
anyhow = "1.0.92"
rcgen = "0.13.1"
dashmap = {version = "6.1.0", features = ["serde"]}
tracing = {version = "0.1.40", features = ["async-await"]}
tokio-util = "0.7.12"
serde_json = "1.0.132"
rfd = "0.15.0"
sha256 = "1.5.0"
uuid = {version = "1.11.0", features = ["serde", "v4", "fast-rng"]}
tracing-subscriber = "0.3.18"
rmp-serde = "1.3.0"
egui-notify = "0.17.0"
criterion = {version = "0.5.1", features = ["async_tokio", "async_futures"]}
egui_extras = "0.29.1"
indexmap = {version = "2.6.0", features = ["serde"]}
strum = {version = "0.26.3", features = ["derive"]}
chrono = {version = "0.4.38", features = ["serde"]}